--- a/about.html
+++ b/about.html
@@ -104,6 +104,26 @@
                 <img src="imgs/intro1.jpeg" alt="">
                 <p>project1 detail</p>
             </div>
+            <div class="about-showcase-detail">
+                <img src="imgs/intro2.jpg" alt="">
+                <p>project1 detail</p>
+            </div>
+            <div class="about-showcase-detail">
+                <img src="imgs/intro1.jpeg" alt="">
+                <p>project1 detail</p>
+            </div>
+            <div class="about-showcase-detail">
+                <img src="imgs/intro2.jpg" alt="">
+                <p>project1 detail</p>
+            </div>
+            <div class="about-showcase-detail">
+                <img src="imgs/intro1.jpeg" alt="">
+                <p>project1 detail</p>
+            </div>
+            <div class="about-showcase-detail">
+                <img src="imgs/intro1.jpeg" alt="">
+                <p>project1 detail</p>
+            </div>
         </div>
     </section>
 
