--- a/about.html
+++ b/about.html
@@ -30,12 +30,13 @@
         <div class="about">
             <h1>About</h1>
             <div class="br"></div>
-            <p>This is the page I created with HTML, CSS and JS.
+            <p>This is a web page I created with HTML, CSS and JS. It is a responsive website which will look good on
+                any size of screen.
                 I love front end and design, so I learn front end web
-                develop and try to make something I like.</p>
+                development and try to make something I enjoy.</p>
             <p>
                 I am now look for a job as a front end developer.
-                I am capable of creating/designing a web page with basic functionalities.
+                I am capable of creating/designing web pages with basic functionalities.
                 I will be more capable and efficient as I learn and do more in this field.
                 Feel free to contact me if your companies are interested in me.</p>
         </div>
